Endra småtteri i manifset

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Worldle",
-  "name": "Wordle game in the World",
+  "short_name": "Kommundle",
+  "name": "Kommundle, et spill av Norge",
   "icons": [
     {
       "src": "favicon.ico",
