Små endringer i navn og beskrivelse

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Kommundle",
-  "name": "Wordle game in the World",
+  "name": "Kommunespillet Kommundle",
   "icons": [
     {
       "src": "favicon.ico",
