--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "geolib": "^3.3.3",
+    "i18next": "^21.6.7",
+    "i18next-browser-languagedetector": "^6.1.2",
     "luxon": "^2.3.0",
     "react": "^17.0.2",
     "react-autosuggest": "^10.1.0",
     "react-copy-to-clipboard": "^5.0.4",
+    "react-countup": "^6.1.1",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.15.3",
     "react-modal": "^3.14.4",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "react-toastify": "^8.1.0",
     "seedrandom": "^3.0.5",
     "typescript": "^4.5.4",
@@ -53,9 +57,16 @@
     "@types/react-copy-to-clipboard": "^5.0.2",
     "@types/react-modal": "^3.13.1",
     "@types/seedrandom": "^3.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.10.1",
+    "@typescript-eslint/parser": "^5.10.1",
     "autoprefixer": "^10.4.2",
+    "eslint": "^8.7.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.28.0",
     "mini-css-extract-plugin": "2.4.5",
     "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.15"
+    "prettier": "^2.5.1",
+    "tailwindcss": "^3.0.18"
   }
 }
