--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
     "@types/node": "^16.11.19",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "confetti-explosion-react": "^0.1.2",
     "geolib": "^3.3.3",
     "i18next": "^21.6.7",
     "i18next-browser-languagedetector": "^6.1.2",
     "luxon": "^2.3.0",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-autosuggest": "^10.1.0",
+    "react-confetti-explosion": "^2.1.2",
     "react-copy-to-clipboard": "^5.0.4",
     "react-countup": "^6.1.1",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-i18next": "^11.15.3",
     "react-modal": "^3.14.4",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "^5.0.0",
     "react-toastify": "^8.1.0",
     "seedrandom": "^3.0.5",
