--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
   "i18n-ally.localesPaths": [
     "src"
-  ]
+  ],
+  "workbench.colorCustomizations": {
+    "activityBar.background": "#21d36e",
+    "titleBar.activeBackground": "#0F4A28",
+    "titleBar.activeForeground": "#F4FDF8"
+  }
 }
