--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Artle",
-  "name": "Kommunespillet Kommundle",
+  "name": "The art quiz 'Artle'",
   "icons": [
     {
       "src": "favicon.ico",
